<resources>
    <string name="app_name">Lab3</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--Specified strings for application-->
    <string name="course1">Course 1:</string>
    <string name="course2">Course 2:</string>
    <string name="course3">Course 3:</string>
    <string name="course4">Course 4:</string>
    <string name="course5">Course 5:</string>
    <string name="course6">Course 6:</string>
    <string name="course7">Course 7:</string>
    <string name="course8">Course 8:</string>

    <string name="coursename">Course Name</string>
    <string name="credits"># of Credits</string>
    <string name="lettergrade">Letter Grade</string>




    <string name="calculate">Calculate GPA</string>
    <string name="help">HELP</string>

    <string name="hello_first_fragment">Enter course information below:</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>